syntax = "proto3";

package cli.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/drewfead/proto-cli/proto/cli/v1;cli";

// TUI-specific options for an RPC method command.
message TUICommandOptions {
  // Display name for this method in TUI method lists and breadcrumbs.
  // Defaults to the Go method name (e.g. "GetUser") if not set.
  string name = 1;

  // When true, this command is hidden from the TUI even if service tui=true.
  bool hidden = 2;
}

// TUI-specific options for a message field.
message TUIFlagOptions {
  // Display label for this field in TUI forms (defaults to flag name).
  string label = 1;

  // When true, this field is hidden from TUI forms.
  bool hidden = 2;
}

// CLI command annotation for RPC methods
// Customizes command name and help text following urfave/cli v3 best practices
message CommandOptions {
  // Custom name for the command (defaults to kebab-case of method name)
  string name = 1;

  // Short one-line description shown in command lists and help summaries
  // Best practice: Keep concise (e.g., "retrieve a user by ID")
  string description = 2;

  // Longer, detailed explanation of the command
  // Use this for multi-paragraph documentation, examples, and detailed behavior
  string long_description = 3;

  // Custom usage text to override the auto-generated USAGE line
  // Example: "get-user [options] <user-id>"
  string usage_text = 4;

  // Description of arguments this command accepts
  // Example: "<user-id>" or "[filter-expression]"
  string args_usage = 5;

  // When true, the command always runs in-process (local call path only).
  // The --remote flag is suppressed entirely for this command.
  // Note: the method is still available on the gRPC server if the service is
  // registered; local_only only affects the generated CLI layer.
  bool local_only = 6;

  // TUI-specific overrides for this command.
  TUICommandOptions tui = 10;
}

// CLI flag annotation for message fields
// Maps message fields to CLI flags
message FlagOptions {
  string name = 1;
  string shorthand = 2;
  string usage = 3;
  bool required = 4;

  // Placeholder for flag value shown in usage text (e.g., "<host>", "<port>")
  // Integrates with urfave/cli's placeholder syntax
  string placeholder = 5;

  // Long-form description for detailed documentation
  // Used in config file comments, extended help text, and generated docs
  string description = 6;

  // TUI-specific overrides for this field.
  TUIFlagOptions tui = 10;

  // Default value for this flag, as a string.
  // Parsed to the appropriate Go type at code-generation time for CLI flags,
  // and used directly to pre-populate TUI form fields.
  string default_value = 12;
}

// TUI-specific options for a service.
// The presence of this message on a service enables it in the interactive TUI.
// Set to {} to enable with all defaults, or set name to customize the display name.
message TUIServiceOptions {
  // Display name for this service in TUI tab bars and headings.
  // Defaults to the Go type name (e.g. "UserService") if not set.
  string name = 1;
}

// Service options annotation
// Defines CLI customization for a service following urfave/cli v3 best practices
message ServiceOptions {
  // Custom name for the service command (defaults to kebab-case of service name)
  string name = 1;

  // Short one-line description shown in service lists
  // Best practice: Keep concise (e.g., "user management commands")
  string description = 2;

  // Longer, detailed explanation of the service
  // Use this for multi-paragraph documentation and service overview
  string long_description = 3;

  // Custom usage text to override the auto-generated USAGE line
  string usage_text = 4;

  // Description of arguments this service accepts
  string args_usage = 5;

  // TUI-specific options. Presence of this field includes the service in the
  // interactive TUI. Use {} to enable with defaults, or set name to customize
  // the display name shown in tab bars and headings.
  TUIServiceOptions tui = 10;
}

// Service config annotation
// Defines the configuration message type for a service
message ServiceConfigOptions {
  // Name of the config message type (must be in same package)
  string config_message = 1;
}

// Enum value annotation
// Allows customizing the CLI name for enum values
message EnumValueOptions {
  // Custom CLI name for this enum value (defaults to enum value name)
  // Example: For LogLevel.DEBUG, you might use "debug" or "verbose"
  string name = 1;
}

extend google.protobuf.MethodOptions {
  CommandOptions command = 50001;
}

extend google.protobuf.FieldOptions {
  FlagOptions flag = 50002;
}

extend google.protobuf.ServiceOptions {
  ServiceOptions service = 50000;
  ServiceConfigOptions service_config = 50003;
}

extend google.protobuf.EnumValueOptions {
  EnumValueOptions enum_value = 50004;
}
